<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_location">Event location</string>
    <string name="event_name">Event name</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Event description</string>
    <string name="fab_plus">add new event button</string>
    <string name="date_range">%1$s - %2$a</string>
    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="account_circle">account_circle</string>
    <string name="log_out_button">log out button</string>
    <string-array name="event_types">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Conference</item>
    </string-array>
    <plurals name="event_days">
        <item quantity="one">%d day.</item>
        <item quantity="other">%d days.</item>
    </plurals>
    <string name="fragment_timeline">Timeline</string>
    <string name="fragment_favorites">Favorites</string>
    <string name="fragment_maps">Maps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event">Create Event</string>
    <string name="event_image">event image</string>
    <string name="edit">Edit\n</string>
    <string name="info">Info\n</string>
    <string name="event_icon">an icon based on the event</string>
    <string name="event_title">the title of the event</string>
    <string name="event_favorite_button">button that adds event to favorite list\n</string>
    <string name="user_info_title">User Info</string>
    <string name="action_logout">Logout</string>
    <string name="ok">Okay</string>
    <string name="profile_pic">profile picture</string>
    <string name="user_guest">Guest</string>
    <string name="user_email">WhyDon\'tYouCreateAUser@yahoo.com</string>
    <string name="unknown_user">\?? This user is unknown ??</string>
    <string name="action_login">Login</string>
    <string name="not_logged_in">Log in to use favorites feature</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel\n</string>
    <string name="maps">Maps</string>
    <string name="calendar">Calendar</string>
    <string name="default_image_url">https://picsum.photos/seed/200/400/194</string>
    <string name="edit_event">Edit Event</string>
    <string name="save">Save</string>
    <string name="event_unfavorite_button">Button that removes from favorites.</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="event_info_title">Event Info</string>
    <string name="delete">Delete</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="capture_image">Capture</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="upload_image">Upload Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_image_please">Please, take or upload an image.</string>
    <string name="share">Share</string>
    <string name="weather">Weather at location</string>
    <string name="temperature_unavailable">Loading temperature...</string>
    <string name="temperature_text">Current Temperature: %.2f°C</string>
</resources>