<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_timeline"
        android:enabled="true"
        android:icon="@drawable/baseline_calendar_view_day_24"
        android:title="@string/fragment_timeline"/>

    <item
        android:id="@+id/fragment_favorites"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/fragment_favorites"/>

    <item
        android:id="@+id/fragment_maps"
        android:enabled="true"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/maps"/>

    <item
        android:id="@+id/fragment_calendar"
        android:enabled="true"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/calendar"/>

</menu>