<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_event_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_larger_28"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:src="@drawable/baseline_logout_wrong"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/item_image"
                app:layout_constraintEnd_toStartOf="@id/item_event_title"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/event_icon" />


            <TextView
                android:id="@+id/item_event_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toEndOf="@id/item_event_letter"
                app:layout_constraintBottom_toTopOf="@id/item_image"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/event_title"/>

            <TextView
                android:id="@+id/item_event_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginStart="@dimen/margin_small_8"
                android:lines="2"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toEndOf="@id/item_event_letter"
                app:layout_constraintTop_toBottomOf="@id/item_event_title"
                app:layout_constraintBottom_toTopOf="@id/item_image"
                android:text="@string/event_type"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/item_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.76"
                app:layout_constraintStart_toEndOf="@id/item_event_title"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/event_btn_unfavorite"
                style="?attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/margin_larger_28"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                app:icon="@drawable/baseline_favorite_48"
                android:contentDescription="@string/event_unfavorite_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/item_image"
                app:layout_constraintStart_toEndOf="@id/item_event_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/event_btn_favorite"
                style="?attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/margin_larger_28"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                app:icon="@drawable/outline_favorite_border_24"
                android:contentDescription="@string/event_favorite_button"
                app:layout_constraintTop_toTopOf="@id/event_btn_unfavorite"
                app:layout_constraintBottom_toBottomOf="@id/event_btn_unfavorite"
                app:layout_constraintStart_toStartOf="@id/event_btn_unfavorite"
                app:layout_constraintEnd_toEndOf="@id/event_btn_unfavorite" />

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:background="?colorSurfaceContainerLow"
                android:contentDescription="@string/event_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_event_type"
                app:layout_constraintBottom_toTopOf="@id/item_event_location"/>

            <TextView
                android:id="@+id/item_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_16"
                android:layout_marginTop="@dimen/margin_medium_16"
                app:layout_constraintBottom_toTopOf="@id/item_event_date"
                app:layout_constraintTop_toBottomOf="@id/item_image"
                android:text="@string/event_location"/>

            <TextView
                android:id="@+id/item_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_16"
                app:layout_constraintTop_toBottomOf="@id/item_event_location"
                app:layout_constraintBottom_toTopOf="@id/item_event_description"
                android:text="@string/event_date"/>



            <TextView
                android:id="@+id/item_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_16"
                android:layout_marginStart="@dimen/margin_medium_16"
                android:layout_marginTop="@dimen/margin_large_24"
                android:lines="4"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_event_date"
                app:layout_constraintBottom_toTopOf="@id/buttons_constraint"
                android:text="@string/event_description"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttons_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item_event_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_delete"
                    style="?attr/materialIconButtonFilledStyle"
                    android:backgroundTint="@color/red"
                    android:layout_width="@dimen/btn_width_standard_88"
                    android:layout_height="@dimen/btn_height_standard_48"
                    android:layout_marginTop="@dimen/margin_tiny_4"
                    android:layout_marginEnd="@dimen/margin_tiny_4"
                    android:layout_marginStart="@dimen/margin_medium_16"
                    android:layout_marginBottom="@dimen/margin_small_8"
                    android:text="@string/delete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_edit"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="@dimen/btn_width_standard_88"
                    android:layout_height="@dimen/btn_height_standard_48"
                    android:layout_marginTop="@dimen/margin_tiny_4"
                    android:layout_marginEnd="@dimen/margin_tiny_4"
                    android:layout_marginBottom="@dimen/margin_small_8"
                    android:text="@string/edit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_info"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_info"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="@dimen/btn_width_standard_88"
                    android:layout_height="@dimen/btn_height_standard_48"
                    android:layout_marginTop="@dimen/margin_tiny_4"
                    android:layout_marginEnd="@dimen/margin_medium_16"
                    android:layout_marginBottom="@dimen/margin_small_8"
                    android:text="@string/info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>