<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium_16"
    tools:context=".fragments.UserInfoDialogFragment">

    <TextView
        android:id="@+id/user_info_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_view_photo"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/user_info_title"/>

    <!-- User Photo -->
    <ImageView
        android:id="@+id/image_view_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_logout_wrong"
        app:layout_constraintTop_toBottomOf="@id/user_info_headline"
        app:layout_constraintBottom_toTopOf="@id/text_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/profile_pic"
    />

    <!-- User Name -->
    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_email"
        app:layout_constraintTop_toBottomOf="@id/image_view_photo"
        android:text="@string/username"
    />

    <!-- User Email -->
    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name"
        android:text="@string/user_email"
    />

</androidx.constraintlayout.widget.ConstraintLayout>