<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium_16"
    tools:context=".fragments.EditEventDialogFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--  Event name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/event_name"
                app:startIconDrawable="@drawable/baseline_festival_24"
                app:startIconContentDescription="This is a festival icon"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Event location  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/event_location"
                app:startIconDrawable="@drawable/baseline_add_location_24"
                app:startIconContentDescription="Add location icon"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Event date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/event_date"
                app:startIconDrawable="@drawable/baseline_calendar_month_24"
                app:startIconContentDescription="Calendar icon"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Event type -->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/text_field_event_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                app:startIconDrawable="@drawable/baseline_celebration_24"
                app:startIconContentDescription="Event icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_date">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_event_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_type"
                    android:inputType="none"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Event description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/event_description"
                app:endIconMode="clear_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="3"
                    android:maxLines="12"
                    android:inputType="textMultiLine|textCapSentences"
                    android:gravity="top|start"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Event name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/event_image"
                app:startIconContentDescription="Event image url"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_description"
                app:layout_constraintBottom_toTopOf="@id/text_field_event_latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/default_image_url"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/latitude"
                app:startIconContentDescription="Event latitude"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_image"
                app:layout_constraintBottom_toTopOf="@id/text_field_event_longitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small_8"
                android:layout_marginEnd="@dimen/margin_small_8"
                android:layout_marginTop="@dimen/margin_medium_16"
                android:hint="@string/longitude"
                app:startIconContentDescription="Event longitude"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/takePicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_picture"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_medium_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/uploadBtn"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_longitude"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/uploadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_medium_16"
                app:layout_constraintStart_toEndOf="@id/takePicBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_longitude"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
